# light-wizard

./: .gitignore  CMakeLists.txt  README.md
include/: Config.h  Config.h.in  ray.h
lib/geometry_lib/: CMakeLists.txt  geometry.h  plane.cpp  plane.h  sphere.cpp  sphere.h
lib/graphics_lib/: CMakeLists.txt  camera.cpp  camera.h  light.cpp  light.h  plane.cpp  plane.h  ray.cpp  ray.h  scene.cpp  scene.h  vec3.cpp  vec3.h
lib/operations_lib/: CMakeLists.txt  operations.cpp  operations.h
lib/point_lib/: CMakeLists.txt  point.cpp  point.h
lib/ray_lib/: CMakeLists.txt  ray.cpp  ray.h
lib/rays/: CMakeLists.txt  ray.cpp  ray.h
src/: main.cpp  ray.cpp
tests/src/: vec_test_1.cpp
tests/src/intersection_tests/: basic_intersection_test.cpp
tests/src/vec_tests/: op_overl_test.cpp
